fixed blue text issue on buttons on mobile

--- a/components/dashboard/dashboard.css
+++ b/components/dashboard/dashboard.css
@@ -94,6 +94,7 @@ button {
     transition: 0.4s ease-in-out;
     border: none;
     border-radius: 0.2em;
+    color: black;
 }
 
 button:hover {
